# MyFutureSelfAI_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260712_0001_initial.py  20260712_0002_required_profile_owners.py  20260713_0003_persistent_inbox_drafts.py  20260713_0004_conversation_context.py  20260713_0005_draft_dates_and_context.py  20260713_0006_draft_focus.py  20260713_0007_system_draft_actions.py  20260713_0008_temporal_resolution.py  (+11 more)
docs/: MANUAL_TEST.md  PRD.md
scripts/: clean_caches.ps1  run_windows.ps1  setup_windows.ps1
tests/: conftest.py  test_collection_handlers.py  test_collection_migration.py  test_collections.py  test_conversation_context.py  test_doctor_prep.py  test_doctor_search.py  test_domain.py  test_draft_commands.py  test_hardening.py  test_health.py  test_intents.py  test_knowledge_backup.py  test_knowledge_domain.py  test_knowledge_extraction.py  test_knowledge_handlers.py  test_knowledge_migration.py  test_knowledge_runner.py  test_knowledge_storage.py  test_lab_migration.py  test_labs.py  test_location.py  test_multi_user_readiness.py  test_navigation.py  test_providers.py  test_reminders.py  test_runtime.py  test_task_handlers.py  test_task_migration.py  test_tasks.py  test_timezone_onboarding.py  test_vision.py  test_vision_image_migration.py  test_vision_images.py  test_vision_migration.py  test_vision_renderer.py  test_voice.py  test_workspace_access.py  test_workspace_handler_security.py  test_workspace_migration.py  (+2 more)
(+65 files in other folders)
